testproj/src/objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>First_quarter__c</fullName>
        <label>First quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StudentName__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Attendance</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>second_quarter__c</fullName>
        <label>second quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_percentage__c</fullName>
        <formula>MIN(1/1, First_quarter__c  /  second_quarter__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>total percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Attendance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>